# Zeitgeist

./: CONTRIBUTING.md  LICENSE  README.md  config.py  env.txt  main.py  pyproject.toml  requirements.txt  security_enhancements.py
docs/: architecture-guide.md  configuration.md
src/aggregator/: article_fetcher.py  dedup_engine.py
src/dashboard/: analytics.py
src/database/: manager.py  models.py
src/generator/: generate_post.py  quality_scorer.py
src/maintenance/: backup.py  monitor.py
src/monitoring/: alerts.py  health_check.py  metrics.py  structured_logging.py
src/publisher/: notion_publisher.py  post_to_site.py
src/scheduler/: schedule.py
src/templates/: dashboard.html  template.html
src/trends/: detect.py  search.py
